<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/main_gradient_bg"
    android:fitsSystemWindows="true">
    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/dp_45"
        android:layout_height="@dimen/dp_45"
        android:src="@drawable/ic_white_back"
        android:layout_marginTop="@dimen/dp_25"
        android:scaleType="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/dp_74"
        android:layout_marginRight="@dimen/dp_74"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dp_30"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="63dp"
            android:layout_height="63dp"
            android:src="@drawable/ic_login_logo"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_14"
            android:textColor="@color/white"
            android:textSize="@dimen/font_sp_17"
            android:text="@string/user_login"/>

        <EditText
            android:id="@+id/ed_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:textCursorDrawable="@drawable/white_cursor_color"
            android:background="@drawable/line_edittext_bg"
            android:layout_marginTop="47dp"
            android:drawablePadding="@dimen/dp_10"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_shouji_bai"
            />
        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_5"
            android:paddingBottom="@dimen/dp_5"
            android:textCursorDrawable="@drawable/white_cursor_color"
            android:background="@drawable/line_edittext_bg"
            android:layout_marginTop="25dp"
            android:drawablePadding="@dimen/dp_10"
            android:textColor="@color/white"
            android:drawableLeft="@drawable/ic_mima_bai"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:layout_marginTop="@dimen/dp_40"
            android:background="@drawable/white_round_bg"
            android:text="@string/login"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_forget"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_sp_14"
            android:text="@string/forget_password"/>

        <TextView
            android:id="@+id/tv_regist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_sp_14"
            android:text="@string/regist_crash_gift"/>
    </LinearLayout>
</LinearLayout>