<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bg_color_f5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_view_height"
        android:background="@drawable/blue_to_purple_bg">

        <TextView
            android:id="@+id/title_name"
            style="@style/TitleStyle"
            android:textColor="@color/white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/user_register"/>

        <RelativeLayout
            android:id="@+id/title_back_button"
            android:layout_width="@dimen/title_view_height"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true">
            <ImageView
                android:id="@+id/title_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_white_back"/>
        </RelativeLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="37dp"
        android:paddingRight="37dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/ed_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_7"
            android:paddingBottom="@dimen/dp_7"
            android:paddingLeft="@dimen/dp_14"
            android:paddingRight="@dimen/dp_14"
            android:background="@drawable/line_gray_edittext_bg"
            android:layout_marginTop="35dp"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/input_phonenumber"
            android:textColorHint="@color/font_color_b5"
            android:textSize="@dimen/font_sp_14"
            android:textColor="@color/font_color_66"
            android:drawableLeft="@drawable/ic_shouji"
            android:inputType="phone"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:paddingTop="@dimen/dp_7"
            android:paddingBottom="@dimen/dp_7"
            android:paddingLeft="@dimen/dp_14"
            android:background="@drawable/line_gray_edittext_bg">
            <EditText
                android:id="@+id/ed_certify"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:drawablePadding="@dimen/dp_10"
                android:hint="@string/input_phone_cetify"
                android:textColorHint="@color/font_color_b5"
                android:textSize="@dimen/font_sp_14"
                android:textColor="@color/font_color_66"
                android:drawableLeft="@drawable/ic_yanzheng"
                android:layout_centerVertical="true"
                android:inputType="number"
                android:layout_toLeftOf="@+id/btn_phone_certify"/>
            <Button
                android:id="@+id/btn_phone_certify"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_22"
                android:background="@drawable/btn_rigester_bg"
                android:textColor="@color/bg_color_7698fc"
                android:textSize="@dimen/dp_13"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/btn_voice_certify"
                android:text="手机验证"/>
            <Button
                android:id="@+id/btn_voice_certify"
                android:layout_width="@dimen/dp_60"
                android:layout_height="@dimen/dp_22"
                android:layout_marginLeft="@dimen/dp_8"
                android:textSize="@dimen/dp_13"
                android:background="@drawable/btn_rigester_bg"
                android:textColor="@color/bg_color_7698fc"
                android:text="语音验证"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_7"
            android:paddingBottom="@dimen/dp_7"
            android:paddingLeft="@dimen/dp_14"
            android:paddingRight="@dimen/dp_14"
            android:background="@drawable/line_gray_edittext_bg"
            android:layout_marginTop="25dp"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/register_password"
            android:textColorHint="@color/font_color_b5"
            android:textSize="@dimen/font_sp_14"
            android:textColor="@color/font_color_66"
            android:drawableLeft="@drawable/ic_mima"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/ed_password_again"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/dp_7"
            android:paddingBottom="@dimen/dp_7"
            android:paddingLeft="@dimen/dp_14"
            android:paddingRight="@dimen/dp_14"
            android:background="@drawable/line_gray_edittext_bg"
            android:layout_marginTop="25dp"
            android:drawablePadding="@dimen/dp_10"
            android:hint="@string/register_password_again"
            android:textColorHint="@color/font_color_b5"
            android:textSize="@dimen/font_sp_14"
            android:textColor="@color/font_color_66"
            android:drawableLeft="@drawable/ic_mima"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_38"
            android:layout_marginTop="@dimen/dp_28"
            android:background="@drawable/radius_blue_to_purple_bg"
            android:textColor="@color/white"
            android:textSize="@dimen/font_sp_15"
            android:text="@string/registnow"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_50"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_des"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="已有账号？立即"
                android:textSize="@dimen/font_sp_14"
                android:textColor="@color/font_color_66"/>
            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/tv_des"
                android:gravity="center"
                android:text="登录"
                android:textSize="@dimen/font_sp_14"
                android:textColor="@color/bg_color_7698fc"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>