<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                >
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="185dp"
                    android:background="@drawable/half_blue_bg">

                    <LinearLayout
                        android:id="@+id/ll_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="@dimen/dp_30"
                        android:layout_centerHorizontal="true"
                        android:gravity="center_horizontal">
                        <TextView
                            android:id="@+id/tv_title_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_sp_15"
                            android:textColor="@color/white"
                            android:text="总资产（元）"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/font_sp_16"
                            android:layout_marginTop="@dimen/dp_8"
                            android:textColor="@color/font_color_ff8243"
                            android:text="0.00"/>
                    </LinearLayout>

                    <ImageView
                        android:id="@+id/iv_notice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/dp_12"
                        android:scaleType="centerInside"
                        android:src="@drawable/ic_message"
                        android:layout_alignParentRight="true"
                        android:layout_marginTop="@dimen/dp_12"
                        android:layout_marginRight="@dimen/dp_12"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_below="@+id/ll_title"
                        android:layout_marginTop="29dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/font_sp_15"
                                android:textColor="@color/white"
                                android:text="总资产（元）"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/font_sp_15"
                                android:textColor="@color/white"
                                android:text="总资产（元）"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/font_sp_15"
                                android:textColor="@color/white"
                                android:text="总资产（元）"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="@dimen/font_sp_15"
                                android:textColor="@color/white"
                                android:text="总资产（元）"/>
                        </LinearLayout>
                    </LinearLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_portrait"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_15"
                    android:layout_marginRight="@dimen/dp_15"
                    android:layout_alignParentBottom="true"
                    >
                    <ImageView
                        android:id="@+id/iv_bg"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/dp_64"
                        android:layout_alignParentBottom="true"
                        android:background="@drawable/white_round_bg"/>
                    <ImageView
                        android:id="@+id/iv_portrait"
                        android:layout_width="@dimen/dp_70"
                        android:layout_height="@dimen/dp_70"
                        android:layout_alignTop="@+id/iv_bg"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="-42dp"
                        android:src="@drawable/white_oval_bg"
                        />
                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="@dimen/dp_92"
                        android:layout_height="29dp"
                        android:layout_below="@+id/iv_portrait"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="@dimen/dp_2"
                        android:background="@drawable/main_radius_btn"
                        android:textSize="@dimen/font_sp_14"
                        android:textColor="@color/white"
                        android:text="@string/registandlogin"
                        android:visibility="visible"/>

                    <Button
                        android:layout_width="@dimen/dp_66"
                        android:layout_height="21dp"
                        android:layout_alignBottom="@+id/iv_portrait"
                        android:layout_alignLeft="@+id/iv_portrait"
                        android:layout_marginBottom="-3dp"
                        android:layout_marginLeft="@dimen/dp_25"
                        android:background="@drawable/main_radius_btn"
                        android:textSize="@dimen/font_sp_13"
                        android:textColor="@color/white"
                        android:text="@string/open_up"
                        android:visibility="gone"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/font_sp_13"
                        android:textColor="@color/font_color_a9"
                        android:layout_centerHorizontal="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginBottom="@dimen/dp_10"
                        android:text="18695890263"/>
                </RelativeLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_1"
                    android:background="@color/bg_color_f7"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    >
                    <TextView
                        android:id="@+id/tv_balance"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="241"
                        android:paddingLeft="@dimen/dp_22"
                        android:gravity="center_vertical"
                        android:textSize="@dimen/font_sp_14"
                        android:textColor="@color/font_color_44"
                        android:text="账户余额： 0.00  元"/>
                    <View
                        android:layout_width="@dimen/dp_1"
                        android:layout_height="match_parent"
                        android:background="@color/bg_color_f7"/>
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="134"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/tv_addprice"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@color/main_color"
                            android:textSize="@dimen/font_sp_14"
                            android:text="@string/recharge"/>
                        <TextView
                            android:id="@+id/tv_checkcash"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:textColor="@color/font_color_01032a"
                            android:textSize="@dimen/font_sp_14"
                            android:text="@string/crash"/>
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_4"
                android:background="@color/bg_color_f7"/>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rc_personal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</FrameLayout>